--- a/templates/verify.html
+++ b/templates/verify.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link href="../static/verify.css" rel="stylesheet">
+    <link href="{% static 'home/css/verify.css' %}" rel="stylesheet">
     
     <title>Law Merchant</title>
     
@@ -18,7 +18,7 @@
             <nav class="navbar navbar-expand-lg bg-body-tertiary">
                 <div class="nav container-fluid">
                     <div>
-                        <img src="../static/images/logo.png" height="40px">  
+                        <img src="{% static 'home/images/logo.png' %}" height="40px">  
                         <a class="navbar-brand" href="#">Law Merchant</a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
@@ -27,16 +27,16 @@
                   <div class="collapse navbar-collapse h-list" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="../templates/index.html">Home</a>
-                        <a class="nav-link active" aria-current="page" href="../templates/about.html">About Us</a>
-                        <a class="nav-link active" aria-current="page" href="../templates/contact.html">Contact Us</a>
+                        <a class="nav-link active" aria-current="page" href="/">Home</a>
+                        <a class="nav-link active" aria-current="page" href="/about">About Us</a>
+                        <a class="nav-link active" aria-current="page" href="/contact">Contact Us</a>
 
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Central/State
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Central</a></li>
-                            <li><a class="dropdown-item" href="#">State</a></li>
+                            <li><a class="dropdown-item" href="/central">Central</a></li>
+                            <li><a class="dropdown-item" href="/state">State</a></li>
                         </ul>
 
                       </li>
