--- a/static/home/css/contact.css
+++ b/static/home/css/contact.css
@@ -1,5 +1,5 @@
 .contact{
-     background-image: url(../static/images/1.svg);
+     background-image: url('/static/home/images/1.svg');
      height: 100%;
      display: flex;
      align-items: center;
