--- a/static/home/css/verify.css
+++ b/static/home/css/verify.css
@@ -1,5 +1,5 @@
 .header{
-    background-image: url(../static/images/1.svg);
+    background-image: url('/static/home/images/1.svg');
 }
 .hero{
     height: 80vh;
