some html changes

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
           <div class="nav container-fluid">
             <div>
               <img src="{% static 'home/images/logo.png' %}" height="40px" />
-              <a class="navbar-brand" href="#">Law Merchant</a>
+              <a class="navbar-brand" href="/">Law Merchant</a>
 
               <button
                 class="navbar-toggler"
@@ -214,10 +214,10 @@
       <div class="footer">
         <div class="f-left">
           <ul>
-            <li>Home</li>
-            <li>About Us</li>
-            <li>Central/state</li>
-            <li>Contact Us</li>
+            <a href="/"><li>Home</li></a>
+            <a href="/about"><li>About Us</li></a>
+            <a href="/central"><li>Central/state</li></a>
+            <a href="/contact"><li>Contact Us</li></a>
           </ul>
         </div>
         <div class="f-middle">
