--- a/static/home/css/index.css
+++ b/static/home/css/index.css
@@ -61,8 +61,8 @@ p{
 .list-items ol li{
     background: palevioletred;
     margin: 13px;
-    padding: 2px;
-    height: 3rem;
+    padding: 13px;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -78,5 +78,6 @@ p{
 .l-logos{
     display: flex;
     align-items: center;
-    background-color: aquamarine;
+    background-color: rgb(127, 225, 255);
+    border-radius: 2rem;
 }
