--- a/templates/index.html
+++ b/templates/index.html
@@ -109,7 +109,7 @@
             <div class="carousel-inner" height="100vh">
               <div class="carousel-item active">
                 <img
-                  src="{% static 'home/images/1.svg' %}"
+                  src="{% static 'home/images/slider1.jpg' %}"
                   class="d-block w-100"
                   alt="..."
                   height="600vh"
@@ -123,7 +123,7 @@
               </div>
               <div class="carousel-item">
                 <img
-                  src="{% static 'home/images/Headimg.png' %}"
+                  src="{% static 'home/images/slider2.jpg' %}"
                   class="d-block w-100"
                   alt="..."
                   height="600vh"
@@ -138,7 +138,7 @@
               </div>
               <div class="carousel-item">
                 <img
-                  src="{% static 'home/images/logo.png' %}"
+                  src="{% static 'home/images/slider3.jpg' %}"
                   class="d-block w-100"
                   alt="..."
                   height="600vh"
@@ -204,7 +204,7 @@
               </ol>
             </div>
             <div class="l-logos">
-              <img src="{% static 'home/images/logo.png' %}" height="120px" />
+              <img src="{% static 'home/images/govlogo.png' %}" height="120px" />
             </div>
           </div>
         </div>
