--- a/templates/index.html
+++ b/templates/index.html
@@ -222,6 +222,7 @@
         </div>
         <div class="f-middle">
           <img src="{% static 'home/images/logo.png' %}" height="120px" />
+          <img src="{% static 'home/images/fssailogo.png' %}" height="80px" />
         </div>
         <div class="f-right">
           <form>
