--- a/templates/central.html
+++ b/templates/central.html
@@ -12,7 +12,7 @@
     />
     <link href="{% static 'home/css/contact.css' %}" rel="stylesheet" />
 
-    <title>Contact Us</title>
+    <title>Central</title>
   </head>
   <body>
     <section class="contact">
