--- a/templates/verify.html
+++ b/templates/verify.html
@@ -174,13 +174,13 @@
 
         <div class="graph">
           <h2 align="center">Graphs</h2>
-          <div class="chart-container">
+          <div class="hello chart-container">
             <canvas id="lineGraph"></canvas>
           </div>
-          <div class="chart-container">
+          <div class="hello chart-container">
             <canvas id="barGraph"></canvas>
           </div>
-          <div class="chart-container">
+          <div class="hello chart-container"  height="100px">
             <canvas id="pieChart"></canvas>
           </div>
         </div>
