--- a/templates/central.html
+++ b/templates/central.html
@@ -10,7 +10,7 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
-    <link href="{% static 'home/css/contact.css' %}" rel="stylesheet" />
+    <link href="{% static 'home/css/central.css' %}" rel="stylesheet" />
 
     <title>Central</title>
   </head>
@@ -70,22 +70,94 @@
             </div>
           </div>
         </nav>
-        <br />
-        <div class="mn">
-          <div class="cont-form">
-            <h1>Contact Us</h1>
+      </div>
+        <div class="central-cnt container">
+            <form class="d-flex srch" role="search">
+                <input class="form-control me-2" type="search" placeholder="What you want to get" aria-label="Search">
+                <button class="butn btn btn-outline-success" type="submit">Search</button>
+            </form>
+        </div>
+        <div class="maindiv container">
+            <div class="divl">
+                <h2>Filters</h2>
+                <ul>
+                    <li><input type="checkbox">Grocery</li>
+                    <li><input type="checkbox">Electronics</li>
+                    <li><input type="checkbox">Fashion</li>
+                    <li><input type="checkbox">Agriculture</li>
+                    <li><input type="checkbox">Others</li>
+                </ul>
+            </div>
+            <div class="divr">
+                <div class="products">
+                    <h4>Refined Oil</h4>
+                    <p>Hello</p>
+                </div>
+                <div class="products">
+                    <h4>Television</h4>
+                    <p>Hello</p>
+                </div>
+                <div class="products">
+                    <h4>Salt</h4>
+                    <p>Hello</p>
+                </div>
+                <div class="products">
+                    <h4>Oats</h4>
+                    <p>Hello</p>
+                </div>
+                <div class="products">
+                    <h4>Watches</h4>
+                    <p>Hello</p>
+                </div>
+                <div class="products">
+                    <h4>Vegetable</h4>
+                    <p>Hello</p>
+                </div>
+                <div class="products">
+                    <h4>Laptop</h4>
+                    <p>Hello</p>
+                </div>
+            </div>
+        </div>
+        <div class="heh">
+            <button class="butn nn">Check</button>
+        </div>
+       
+
+
+
+
+
+
+
+
+
+    </section>    
+    <section class="m-footer">
+        <div class="footer">
+          <div class="f-left">
+            <ul>
+              <a href="/"><li>Home</li></a>
+              <a href="/about"><li>About Us</li></a>
+              <a href="/central"><li>Central/state</li></a>
+              <a href="/contact"><li>Contact Us</li></a>
+            </ul>
+          </div>
+          <div class="f-middle">
+            <img src="{% static 'home/images/logo.png' %}" height="120px" />
+            <img src="{% static 'home/images/fssailogo.png' %}" height="80px" />
+          </div>
+          <div class="f-right">
             <form>
-              <input type="text" placeholder="Name" />
-              <input type="email" placeholder="Email" />
-              <input type="number" placeholder="Phone" />
-              <textarea type placeholder="Feedback"></textarea>
-              <button class="butn">Submit</button>
+              <input type="gmail" placeholder="Your Email" />
+              <button class="butn btn btn-primary">Subscribe</button>
             </form>
           </div>
         </div>
-      </div>
-    </section>
-    <div class="footer"></div>
+        <div>
+          <p align="center">All Rigths Reserved @LawMerchant</p>
+        </div>
+      </section> 
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
