--- a/templates/central.html
+++ b/templates/central.html
@@ -120,7 +120,7 @@
             </div>
         </div>
         <div class="heh">
-            <button class="butn nn">Check</button>
+            <a href="/verify" class="butn nn">Check</a>
         </div>
        
 
