--- a/templates/central.html
+++ b/templates/central.html
@@ -91,36 +91,36 @@
             <div class="divr">
                 <div class="products">
                     <h4>Refined Oil</h4>
-                    <p>Hello</p>
+                    <p>Grocery</p>
                 </div>
                 <div class="products">
                     <h4>Television</h4>
-                    <p>Hello</p>
+                    <p>Electronics</p>
                 </div>
                 <div class="products">
                     <h4>Salt</h4>
-                    <p>Hello</p>
+                    <p>Grocery</p>
                 </div>
                 <div class="products">
                     <h4>Oats</h4>
-                    <p>Hello</p>
+                    <p>Grocery</p>
                 </div>
                 <div class="products">
                     <h4>Watches</h4>
-                    <p>Hello</p>
+                    <p>Electronics</p>
                 </div>
                 <div class="products">
                     <h4>Vegetable</h4>
-                    <p>Hello</p>
+                    <p>Grocery</p>
                 </div>
                 <div class="products">
                     <h4>Laptop</h4>
-                    <p>Hello</p>
+                    <p>Electrinics</p>
                 </div>
             </div>
         </div>
         <div class="heh">
-            <a href="/verify" class="butn nn">Check</a>
+            <button class="butn nn">Check</button>
         </div>
        
 
