--- a/static/home/css/about.css
+++ b/static/home/css/about.css
@@ -15,7 +15,7 @@
 }
 .about{
         background-image: url('/static/home/images/1.svg');
-        height: 100%;
+        height: 100vh;
         display: flex;
         align-items: center;
         justify-content: center;
