--- a/static/home/css/index.css
+++ b/static/home/css/index.css
@@ -103,7 +103,7 @@ p{
 .l-logos{
     display: flex;
     align-items: center;
-    background-color: rgb(127, 225, 255);
+    background-color: rgba(127, 225, 255, 0.31);
     border-radius: 2rem;
 }
 .f-middle{
