--- a/templates/about.html
+++ b/templates/about.html
@@ -1,75 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
     {% load static %}
-    <link href="{% static 'home/css/about.css' %}" rel="stylesheet">
+    <link href="{% static 'home/css/about.css' %}" rel="stylesheet" />
 
     <title>About Us</title>
-</head>
-<body>
+  </head>
+  <body>
     <section class="about">
-        <div class="container">
-            <nav class="navbar navbar-expand-lg bg-body-tertiary">
-                <div class="nav container-fluid">
-                    <div>
-                        <img src="{% static 'home/images/logo.png' %}" height="40px">  
-                        <a class="navbar-brand" href="/">Law Merchant</a>
+      <div class="container">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+          <div class="nav container-fluid">
+            <div>
+              <img src="{% static 'home/images/logo.png' %}" height="40px" />
+              <a class="navbar-brand" href="/">Law Merchant</a>
 
+              <button
+                class="navbar-toggler"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent"
+                aria-expanded="false"
+                aria-label="Toggle navigation"
+              >
+                <span class="navbar-toggler-icon"></span>
+              </button>
+            </div>
+            <div
+              class="collapse navbar-collapse h-list"
+              id="navbarSupportedContent"
+            >
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="/"
+                    >Home</a
+                  >
+                  <a class="nav-link active" aria-current="page" href="/about"
+                    >About Us</a
+                  >
+                  <a class="nav-link active" aria-current="page" href="/contact"
+                    >Contact Us</a
+                  >
 
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
-                </div>
-                  <div class="collapse navbar-collapse h-list" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                      <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/">Home</a>
-                        <a class="nav-link active" aria-current="page" href="/about">About Us</a>
-                        <a class="nav-link active" aria-current="page" href="/contact">Contact Us</a>
+                  <a
+                    class="nav-link dropdown-toggle"
+                    href="#"
+                    role="button"
+                    data-bs-toggle="dropdown"
+                    aria-expanded="false"
+                  >
+                  Laws
+                  </a>
+                  <ul class="dropdown-menu">
+                    <li>
+                      <a class="dropdown-item" href="/central">Central</a>
+                    </li>
+                    <li><a class="dropdown-item" href="/state">State</a></li>
+                  </ul>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
 
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Central/State
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="/central">Central</a></li>
-                            <li><a class="dropdown-item" href="/state">State</a></li>
-                        </ul>
-
-                      </li>
-
-                    </ul>
-                    
-                  </div>
-                </div>
-              </nav>
-
-              <br>
-              <div class="content">
-                <div>
-                    <h1>
-                        About Us
-                    </h1>
-                </div>
-                <div>
-                    <p>
-                        Our Story
-At IT Studio, we're dedicated to simplifying compliance for e-commerce merchants. Our mission is to provide a streamlined approach to navigating legal regulations, ensuring product and service safety for buyers across industries.
-
-Our Mission
-We're committed to offering a normalized representation of legal compliances required for e-commerce companies. By leveraging technology and government repositories, we make compliance management seamless and efficient.
-
-What Sets Us Apart
-Our unique approach combines technology with government resources to provide real-time updates on regulatory changes. With categorized compliance information, merchants can easily understand and meet legal requirements.
-
-Join Us
-Join us in simplifying compliance for e-commerce. Explore our solutions and discover how IT Studio can support your business in navigating the regulatory landscape effortlessly.
-                    </p>
-                </div>
-              </div>
+        <br />
+        <div class="content">
+          <div>
+            <h1>About Us</h1>
+          </div>
+          <div>
+            <p>
+              Our Story At IT Studio, we're dedicated to simplifying compliance
+              for e-commerce merchants. Our mission is to provide a streamlined
+              approach to navigating legal regulations, ensuring product and
+              service safety for buyers across industries. Our Mission We're
+              committed to offering a normalized representation of legal
+              compliances required for e-commerce companies. By leveraging
+              technology and government repositories, we make compliance
+              management seamless and efficient. What Sets Us Apart Our unique
+              approach combines technology with government resources to provide
+              real-time updates on regulatory changes. With categorized
+              compliance information, merchants can easily understand and meet
+              legal requirements. Join Us Join us in simplifying compliance for
+              e-commerce. Explore our solutions and discover how IT Studio can
+              support your business in navigating the regulatory landscape
+              effortlessly.
+            </p>
+          </div>
         </div>
+      </div>
     </section>
-</body>
+  </body>
 </html>
