--- a/templates/central.html
+++ b/templates/central.html
@@ -57,7 +57,7 @@
                     data-bs-toggle="dropdown"
                     aria-expanded="false"
                   >
-                    Central/State
+                    Laws
                   </a>
                   <ul class="dropdown-menu">
                     <li>
@@ -122,14 +122,7 @@
         <div class="heh">
             <a href="/verify"><button class="butn nn">Check</button></a>
         </div>
-       
-
-
-
-
-
-
-
+      
 
 
     </section>    
