--- a/templates/contact.html
+++ b/templates/contact.html
@@ -57,7 +57,7 @@
                     data-bs-toggle="dropdown"
                     aria-expanded="false"
                   >
-                    Central/State
+                  Laws
                   </a>
                   <ul class="dropdown-menu">
                     <li>
