--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     {% load static %}
-    <link  href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
@@ -44,22 +45,13 @@
             >
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a
-                    class="nav-link active"
-                    aria-current="page"
-                    href="/"
+                  <a class="nav-link active" aria-current="page" href="/"
                     >Home</a
                   >
-                  <a
-                    class="nav-link active"
-                    aria-current="page"
-                    href="/about"
+                  <a class="nav-link active" aria-current="page" href="/about"
                     >About Us</a
                   >
-                  <a
-                    class="nav-link active"
-                    aria-current="page"
-                    href="/contact"
+                  <a class="nav-link active" aria-current="page" href="/contact"
                     >Contact Us</a
                   >
 
@@ -70,10 +62,12 @@
                     data-bs-toggle="dropdown"
                     aria-expanded="false"
                   >
-                    Central/State
+                    Laws
                   </a>
                   <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="/central">Central</a></li>
+                    <li>
+                      <a class="dropdown-item" href="/central">Central</a>
+                    </li>
                     <li><a class="dropdown-item" href="/state">State</a></li>
                   </ul>
                 </li>
@@ -190,21 +184,24 @@
                   sales),Regulation,2011
                 </li>
                 <li>
-                  Food Safety and Standards (Prohibition and Restriction of
-                  sales),Regulation,2011
+                  Food Safety and Standards (Contaminants, Toxins and Residues)
+                  Regulation, 2011
                 </li>
                 <li>
-                  Food Safety and Standards (Prohibition and Restriction of
-                  sales),Regulation,2011
+                  Food Safety and Standards (Laboratory and Sampling Analysis)
+                  Regulation, 2011
                 </li>
                 <li>
-                  Food Safety and Standards (Prohibition and Restriction of
-                  sales),Regulation,2011
+                  Food Safety and Standards (Laboratory and Sampling Analysis)
+                  Regulation, 2011
                 </li>
               </ol>
             </div>
             <div class="l-logos">
-              <img src="{% static 'home/images/govlogo.png' %}" height="120px" />
+              <img
+                src="{% static 'home/images/govlogo.png' %}"
+                height="120px"
+              />
             </div>
           </div>
         </div>
