--- a/static/home/css/about.css
+++ b/static/home/css/about.css
@@ -15,7 +15,7 @@
 }
 .about{
         background-image: url('/static/home/images/1.svg');
-        height: 100vh;
+        height: 200vh;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -30,4 +30,11 @@
     background-color: rgba(123, 120, 125, 0.132) !important; 
     padding: 2rem;
     border-radius: 3rem;
+    height: 200vh;
+}
+.about{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
