some ui changes

--- a/templates/verify.html
+++ b/templates/verify.html
@@ -144,27 +144,27 @@
             <tbody>
               <tr>
                 <th scope="row"><input type="checkbox" /></th>
-                <td>Rule1</td>
+                <td>Rule 1 : Name and address of manufacturer exist on package</td>
               </tr>
               <tr>
                 <th scope="row"><input type="checkbox" /></th>
-                <td>Rule2</td>
+                <td>Rule 2 : country of origin should be India</td>
               </tr>
               <tr>
                 <th scope="row"><input type="checkbox" /></th>
-                <td>Rule3</td>
+                <td>Rule 3 : net quantity (should be less than 20kgs) </td>
               </tr>
               <tr>
                 <th scope="row"><input type="checkbox" /></th>
-                <td>Rule4</td>
+                <td>Rule 4 : Retail sale price: MRP(Including all taxes) </td>
               </tr>
               <tr>
                 <th scope="row"><input type="checkbox" /></th>
-                <td>Rule5</td>
+                <td>Rule5 : country of origin should be India</td>
               </tr>
               <tr>
                 <th scope="row"><input type="checkbox" /></th>
-                <td>Rule6</td>
+                <td>Rule6 : Retail sale price: MRP(Including all taxes)</td>
               </tr>
             </tbody>
           </table>
